--- a/style.css
+++ b/style.css
@@ -1,3 +1,35 @@
+* { 
+  margin: 0; padding: 0; box-sizing: border-box; 
+}
+
+.sidebar { 
+  position: fixed; 
+  left: 0; 
+  top: 0; 
+  width: 200px; 
+  height: 100%; 
+  background-color: #333; 
+  overflow-x: hidden; 
+  transition: width 0.3s; 
+  padding-top: 20px; 
+} 
+
+.sidebar.collapsed { 
+  width: 50px; 
+} 
+
+.collapsible { 
+  background-color: #333; 
+  color: white; 
+  cursor: pointer; 
+  padding: 15px; 
+  width: 100%; 
+  border: none; 
+  text-align: left; 
+  outline: none; 
+  font-size: 18px; 
+}
+
 body { 
   font-family: 
     Arial, sans-serif; 
