--- a/style.css
+++ b/style.css
@@ -20,7 +20,7 @@
 
 .collapsible { 
   background-color: #333; 
-  color: #333; 
+  color: white; 
   cursor: pointer; 
   padding: 15px; 
   width: 100%; 
