--- a/style.css
+++ b/style.css
@@ -39,6 +39,13 @@
   outline: none; font-size: 18px; 
 } 
 
+.center {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  width: 50%;
+}
+
 .content { 
   display: none; 
   overflow: hidden; 
