--- a/style.css
+++ b/style.css
@@ -29,6 +29,10 @@
   width: 200px; 
 } 
 
+.collapsible:hover { 
+  background-color: #444; 
+  color: #f4f4f4; 
+}
 .collapsible { 
   background-color: #333; 
   color: white; cursor: pointer; 
