--- a/style.css
+++ b/style.css
@@ -35,7 +35,8 @@
 }
 .collapsible { 
   background-color: #333; 
-  color: white; cursor: pointer; 
+  color: white; 
+  cursor: pointer; 
   padding: 15px; 
   width: 100%; 
   border: none; 
@@ -65,11 +66,11 @@
 } 
 
 .content li a { 
+  display: block;
+  padding: 10px 15px; 
   text-decoration: none; 
   color: #333; 
   font-weight: bold; 
-  display: block;
-  padding: 10px 15px; 
   transition: background-color 0.3s, color 0.3s;
 }
 
