--- a/style.css
+++ b/style.css
@@ -60,10 +60,12 @@
 .content ul { 
   list-style-type: none; 
   padding: 0; 
+  margin: 0;
 } 
 
 .content li { 
   padding: 10px; 
+  margin: 0;
 } 
 
 .content li a { 
