--- a/style.css
+++ b/style.css
@@ -49,6 +49,8 @@
   margin-left: 200px; 
   width: calc(100vw - 200px); 
   height: 50vh; 
+  object-fit: contain;
+  overflow: hidden;
   object-fit: cover; 
 
 .content { 
