--- a/style.css
+++ b/style.css
@@ -14,7 +14,7 @@
   padding-top: 20px; 
 } 
 
-. body { 
+body { 
   font-family: 
     Arial, sans-serif; 
   display: flex; 
@@ -52,6 +52,7 @@
   object-fit: contain;
   overflow: hidden;
   object-fit: cover; 
+}
 
 .content { 
   display: none; 
