--- a/style.css
+++ b/style.css
@@ -55,7 +55,7 @@ body {
   margin-left: 200px; 
   width: calc(100vw - 200px); 
   height: 100vh; 
-  object-fit: banner; 
+  object-fit: cover; 
 }
 
 .content ul { 
