--- a/style.css
+++ b/style.css
@@ -51,11 +51,16 @@ body {
   color: #f4f4f4; 
 }
 
-.center {
+.banner {
   margin-left: 200px; 
   width: calc(100vw - 200px); 
-  height: 100vh; 
-  object-fit: cover; 
+  height: 45vh;
+}
+
+.center {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
 }
 
 .content ul { 
