--- a/style.css
+++ b/style.css
@@ -1,5 +1,7 @@
 * { 
-  margin: 0; padding: 0; box-sizing: border-box; 
+  margin: 0; 
+  padding: 0; 
+  box-sizing: border-box; 
 }
 
 .sidebar { 
@@ -7,7 +9,7 @@
   left: 0; 
   top: 0; 
   width: 200px; 
-  height: 100%; 
+  height: 100vh; 
   background-color: #333; 
   overflow-x: hidden; 
   transition: width 0.3s; 
@@ -15,40 +17,9 @@
 } 
 
 body { 
-  font-family: 
-    Arial, sans-serif; 
-  justify-content: center; 
-  align-items: center; 
-  height: 100vh; 
-  margin: 0; 
-  background-color: #f4f4f4; 
+  font-family: Arial, sans-serif;
+  background-color: #f4f4f4;
 } 
-
-.menu { 
-  width: 200px; 
-} 
-
-.content { 
-  display: none; 
-  overflow: hidden; 
-  background-color: #f9f9f9; 
-} 
-
-.collapsible { 
-  background-color: #333; 
-  color: white; 
-  cursor: pointer; 
-  padding: 15px; 
-  width: 100%; 
-  border: none; 
-  text-align: left; 
-  outline: none; font-size: 18px; 
-} 
-
-.collapsible:hover { 
-  background-color: #444; 
-  color: #f4f4f4; 
-}
 
 .banner {
   margin-left: 200px; 
@@ -62,37 +33,6 @@ body {
   object-fit: cover;
 }
 
-.content ul { 
-  list-style-type: none; 
-  padding: 0; 
-  margin: 0;
-} 
-
-.content li { 
-  padding: 10px; 
-  margin: 0;
-} 
-
-.content li a { 
-  display: block;
-  padding: 10px 15px; 
-  text-decoration: none; 
-  color: #333; 
-  font-weight: bold; 
-  transition: background-color 0.3s, color 0.3s;
-}
-
-.content li a:hover { 
-  background-color: #007bff; 
-  color: #fff; 
-}
-
-ul li:hover {
-  background-color: #007bff; 
-  color: #fff; 
-}
-
-
 .main-content {
   margin-left: 200px;
   padding: 20px;
@@ -100,3 +40,59 @@ ul li:hover {
   background-color: #f4f4f4;
 }
 
+.menu {
+  width: 200px;
+}
+
+.content {
+  display: none;
+  overflow: hidden;
+  background-color: #f9f9f9;
+}
+
+.collapsible {
+  background-color: #333;
+  color: white;
+  cursor: pointer;
+  padding: 15px;
+  width: 100%;
+  border: none;
+  text-align: left;
+  outline: none;
+  font-size: 18px;
+}
+
+.collapsible:hover {
+  background-color: #444;
+  color: #f4f4f4;
+}
+
+.content ul {
+  list-style-type: none;
+  padding: 0;
+  margin: 0;
+}
+
+.content li {
+  padding: 10px;
+  margin: 0;
+}
+
+.content li a {
+  display: block;
+  padding: 10px 15px;
+  text-decoration: none;
+  color: #333;
+  font-weight: bold;
+  transition: background-color 0.3s, color 0.3s;
+}
+
+.content li a:hover {
+  background-color: #007bff;
+  color: #fff;
+}
+
+ul li:hover {
+  background-color: #007bff;
+  color: #fff;
+}
