--- a/style.css
+++ b/style.css
@@ -25,6 +25,14 @@ body {
   margin-left: 200px; 
   width: calc(100vw - 200px); 
   height: 45vh;
+  display: block
+}
+
+.banner img {
+  display: block;
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
 }
 
 .center {
@@ -38,6 +46,7 @@ body {
   padding: 20px;
   width: calc(100vw - 200px); 
   background-color: #f4f4f4;
+  display: block;
 }
 
 .menu {
