--- a/style.css
+++ b/style.css
@@ -47,6 +47,45 @@ body {
   width: calc(100vw - 200px); 
   background-color: #f4f4f4;
   display: block;
+  border: 1px solid #ccc;
+  border-radius: 8px;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+}
+
+h1 {
+    color: #333;
+    font-size: 24px;
+    margin-bottom: 10px;
+}
+
+h2 {
+    color: #555;
+    font-size: 20px;
+    margin-top: 20px;
+}
+
+h4 {
+    color: #777;
+    font-size: 16px;
+    margin-bottom: 20px;
+}
+
+p {
+    margin-bottom: 15px;
+    color: #333;
+}
+
+ul {
+    margin-bottom: 20px;
+    padding-left: 20px;
+}
+
+ul li {
+    margin-bottom: 5px;
+}
+
+strong {
+    font-weight: bold;
 }
 
 .menu {
