--- a/style.css
+++ b/style.css
@@ -109,19 +109,19 @@ ul li:hover {
   color: #fff;
 }
 
-h1 {
+.main-content h1 {
     color: #333;
     font-size: 24px;
     margin-bottom: 10px;
 }
 
-h2 {
+.main-content h2 {
     color: #555;
     font-size: 20px;
     margin-top: 20px;
 }
 
-h4 {
+.main-content h4 {
     color: #777;
     font-size: 16px;
     margin-bottom: 20px;
