--- a/style.css
+++ b/style.css
@@ -97,12 +97,12 @@ body {
 }
 
 .content li a:hover {
-  background-color: #ef233c;
+  background-color: #1d1a70;
   color: #edf2f4;
 }
 
 ul li:hover {
-  background-color: #007bff;
+  background-color: #4e51a3;
   color: #fff;
 }
 
