--- a/style.css
+++ b/style.css
@@ -106,6 +106,15 @@ ul li:hover {
   color: #fff;
 }
 
+.main-content {
+  margin-left: 220px;
+  padding: 25px;
+  background-color: #edf2f4;
+  color: #2b2d42;
+  border-radius: 10px;
+  box-shadow: 0 0 15px rgba(0, 0, 0, 0.2);
+  max-width: calc(100vw - 240px); 
+
 .main-content h1 {
     color: #ef233c;
     font-size: 48px;
