--- a/style.css
+++ b/style.css
@@ -114,6 +114,7 @@ ul li:hover {
   border-radius: 10px;
   box-shadow: 0 0 15px rgba(0, 0, 0, 0.2);
   max-width: calc(100vw - 240px); 
+}
 
 .main-content h1 {
     color: #ef233c;
