--- a/style.css
+++ b/style.css
@@ -157,3 +157,12 @@ strong {
     color: #ef233c;
 }
 
+# preloader {
+    background: #2b2d42;
+    height: 100vh;
+    width: 100%;
+    position: fixed;
+    z-index: 100;
+}
+
+
