--- a/style.css
+++ b/style.css
@@ -157,4 +157,14 @@ strong {
     color: #ef233c;
 }
 
+.loadingScreen {
+  position: absolute;
+  z-index: 5;
+  width: 100%;
+  height: 100vh;
+  background-color: white;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
 
