--- a/style.css
+++ b/style.css
@@ -211,22 +211,21 @@ strong {
 
 /* carasel attempt*/
 .carousel {
-  position: relative;
-  width: 600px;
-  overflow: hidden;
-  margin: 0 auto;
-}
+    width: 600px;
+    height: 250px;
+    overflow: hidden;
+    margin: 0 auto;
+    position: relative;
 
 .slides {
   display: flex;
   transition: transform 0.5s ease-in-out;
-  width: calc(600px * 3); /* Adjust width based on the number of images */
+  width: calc(600px * 3); 
 }
-
-.slides img {
-  width: 600px;
-  height: auto;
-}
+.carousel-image {
+    width: 100%; 
+    height: 100%; 
+    object-fit: contain;
 
 .carousel:hover .slides {
   animation: slide 6s infinite;
