--- a/style.css
+++ b/style.css
@@ -222,6 +222,12 @@ strong {
   transition: transform 0.5s ease-in-out;
   width: calc(600px * 3); 
 }
+
+.slides img {
+  width: 600px;
+  height: auto;
+}
+
 .carousel-image {
     width: 100%; 
     height: 100%; 
