--- a/style.css
+++ b/style.css
@@ -220,7 +220,7 @@ strong {
 .slides {
   display: flex;
   transition: transform 0.5s ease-in-out;
-  width: calc(600px * 3); 
+  width: 1800px; 
 }
 
 .slides img {
